RESOLVED FIXED190307
[Web Animations] REGRESSION (r236809): crash under AnimationTimeline::updateCSSAnimationsForElement()
https://bugs.webkit.org/show_bug.cgi?id=190307
Summary [Web Animations] REGRESSION (r236809): crash under AnimationTimeline::updateC...
Antoine Quint
Reported 2018-10-05 00:15:31 PDT
A couple of tests crash under AnimationTimeline::updateCSSAnimationsForElement() after we landed r236809, the fix for webkit.org/b/190257.
Attachments
Patch (3.80 KB, patch)
2018-10-05 00:22 PDT, Antoine Quint
dino: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews107 for mac-sierra-wk2 (3.14 MB, application/zip)
2018-10-05 01:13 PDT, EWS Watchlist
no flags
Antoine Quint
Comment 1 2018-10-05 00:15:43 PDT
Antoine Quint
Comment 2 2018-10-05 00:22:16 PDT
EWS Watchlist
Comment 3 2018-10-05 01:13:37 PDT
Comment on attachment 351660 [details] Patch Attachment 351660 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/9460280 New failing tests: css3/filters/backdrop/add-remove-add-backdrop-filter.html
EWS Watchlist
Comment 4 2018-10-05 01:13:39 PDT
Created attachment 351662 [details] Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Antoine Quint
Comment 5 2018-10-05 03:57:57 PDT
Note You need to log in before you can comment on or make changes to this bug.